hphp/hack/test/sound_dynamic/typing/sound_dynamic_callable_2.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

class Box<T> {
  public function  __construct(public T $x) {}
}

class C {
  <<__SoundDynamicCallable>>
  public function foo() : Box<int> {
    return new Box(42);
  }
}
